--- a/perfiles/templates/perfiles/formulario_perfil.html
+++ b/perfiles/templates/perfiles/formulario_perfil.html
@@ -7,6 +7,6 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" value="Salvar"/>
+  <input type="submit" value="Enviar" class="btn btn-primary" />
 </form>
 {% endblock contenido %}
