--- a/perfiles/templates/perfiles/logout.html
+++ b/perfiles/templates/perfiles/logout.html
@@ -1,5 +1,5 @@
 {% extends "control_estudios/base.html" %}
 
 {% block contenido %}
-<h1>Chao, has cerrado sesión...</h1>
+<h1 style="margin-left: 100px;">Chau, has cerrado sesión...</h1>
 {% endblock contenido %}
