--- a/perfiles/templates/perfiles/registro.html
+++ b/perfiles/templates/perfiles/registro.html
@@ -4,6 +4,6 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" value="Registrarse" />
+  <input type="submit" value="Registrarse" class="btn btn-primary" />
 </form>
 {% endblock contenido %}
