Proyecto listo excepto por los test

--- a/articulos/templates/articulos/base.html
+++ b/articulos/templates/articulos/base.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-dark bg-dark static-top">
             <div class="container">
-                <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Inicio</a>
                 <a class="navbar-brand" href="{% url 'lista_articulo' %}">Articulos</a>
                 <a class="navbar-brand" href="{% url 'about' %}">Acerca de mi</a>
 
