--- a/articulos/templates/articulos/home.html
+++ b/articulos/templates/articulos/home.html
@@ -1,5 +1,5 @@
 {% extends "articulos/base.html" %}
 
 {% block contenido %}
-<h1 style="margin-left: 100px;">Chau, has cerrado sesión...</h1>
+<h1 style="margin-left: 100px;">Bienvenido {{user.username}}</h1>
 {% endblock contenido %}
