--- a/articulos/templates/articulos/ver_mas.html
+++ b/articulos/templates/articulos/ver_mas.html
@@ -1,4 +1,4 @@
-{% extends "control_estudios/base.html" %}
+{% extends "articulos/base.html" %}
 
 {% block contenido %}
 <section style="margin-left: 100px; margin-right: 100px;">
