--- a/perfiles/templates/perfiles/formulario_perfil.html
+++ b/perfiles/templates/perfiles/formulario_perfil.html
@@ -1,4 +1,4 @@
-{% extends "control_estudios/base.html" %}
+{% extends "articulos/base.html" %}
 
 {% block contenido %}
 <p>Tu username es <b>{{ object.username }}</b></p>
