--- a/perfiles/templates/perfiles/formulario_avatar.html
+++ b/perfiles/templates/perfiles/formulario_avatar.html
@@ -1,4 +1,4 @@
-{% extends "control_estudios/base.html" %}
+{% extends "articulos/base.html" %}
 
 {% block contenido %}
 <h3>Subir tu Avatar</h3><br>
