--- a/perfiles/templates/perfiles/login.html
+++ b/perfiles/templates/perfiles/login.html
@@ -1,9 +1,11 @@
-{% extends "control_estudios/base.html" %}
+{% extends "articulos/base.html" %}
 
 {% block contenido %}
+<h2>Iniciar sesión</h2>
+<br>
 <form method="post">
  {% csrf_token %}
  {{ form.as_p }}
- <input type="submit" value="Iniciar Sesión" />
+ <input type="submit" value="Iniciar sesión" class="btn btn-primary" />
 </form>
 {% endblock contenido %}
