proyecto terminado y test implementado

--- a/articulos/templates/articulos/ver_mas.html
+++ b/articulos/templates/articulos/ver_mas.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="text article-title" style="font-weight: bold; font-size: 25px; color: black; margin-top: -5px;">
-    {{ articulo.subtitulo }}
+    <p>{{ articulo.subtitulo }}</p>
   </div>
 
   <p>
